Make directory-based resource URL generation more robust (#325)